Add initial domain model expansion, controllers, services and simulation scaffolding
- Added full unit domain hierarchy (Land/Air/Sea units, vehicles, aircraft, infantry, ships)
- Added projectile domain models (Projectile, Bullet, Shell, Missile)
- Added Faction domain model and FactionsController
- Added UnitsController, MovementController, ProjectilesController
- Added DTOs (MovementSnapshotDto)
- Added WorldState and WorldStateService for global simulation state
- Added SimulationHostedService and AI folder for simulation logic foundation
- Added custom logging (ConsoleColorLogger) and request logging middleware
- Added ServiceCollectionExtensions for DI setup
- Updated launchSettings.json
- General project structure cleanup and new folders (Controllers, Domain, Services, Simulation, Logging, Middleware)

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConsoleLogging": {
+    "Enabled": true,
+    "MinimumLevel": "Debug",
+    "BatchEnabled": false,
+    "BatchIntervalMs": 100,
+    "DisableAtomicLogs": false
+  },
+  "ConsoleLogging:Categories": {
+    "Simulation": true,
+    "Combat": true,
+    "AI": true,
+    "Weapon": true,
+    "EntityProcessor": false,
+    "World": true,
+    "API": true
+  },
+  "ConsoleLogging:CategoryLevels": {
+    "Simulation": "Information",
+    "Combat": "Debug",
+    "AI": "Debug",
+    "Weapon": "Information",
+    "EntityProcessor": "Warning",
+    "World": "Information",
+    "API": "Information"
+  }
 }
