--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -13,5 +13,30 @@
         "Password": ""
       }
     }
+  },
+  "ConsoleLogging": {
+    "Enabled": true,
+    "MinimumLevel": "Information",
+    "BatchEnabled": true,
+    "BatchIntervalMs": 250,
+    "DisableAtomicLogs": true
+  },
+  "ConsoleLogging:Categories": {
+    "Simulation": true,
+    "Combat": true,
+    "AI": true,
+    "Weapon": true,
+    "EntityProcessor": false,
+    "World": true,
+    "API": true
+  },
+  "ConsoleLogging:CategoryLevels": {
+    "Simulation": "Information",
+    "Combat": "Information",
+    "AI": "Information",
+    "Weapon": "Information",
+    "EntityProcessor": "Warning",
+    "World": "Information",
+    "API": "Information"
   }
 }
